# llm_exp

./: .gitignore  build_chroma.py  chroma_lib.py  fix_sqlite.py  parse_sanguo_qa.py  pyproject.toml  qa_chroma.py  rag_sanguo_qa.ipynb  requirements.txt
data/: sanguo_auto_questions.json  sanguo_qa.tsv  sanguo_qa.txt  steam_monster_hunter_world_reviews.json  steam_monster_hunter_world_reviews_cn.json
kg_exp/: extract.py  gen_neo4j.py  sanguo_extract.py  try_neo4j.py
langchain_course/: agent.ipynb  rag_review.ipynb
sanguo_exp/: build_db.py  display.py  eval.py  exp1_baseline.py  exp2_qwen25_rag.py  gen_questions.py  run_eval.py
