[project]
name = "offline-langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "langfuse>=2.60.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
]
